<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Denti</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sample_text">Sample text</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="necta">NECTA</string>
    <string name="baraza_la_mitihani">Baraza la Mitihani</string>
    <string name="heslb">HESLB</string>
    <string name="bodi_ya_mikopo">Bodi ya Mikopo</string>
    <string name="title_activity_necta">Matokeo</string>
    <string name="student_number">Student number</string>
    <string name="title_activity_heslb">Mkopo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="title_activity_necta_result">Student Result</string>
    <string name="title_activity_heslb_result">Mkopo</string>
    <string name="result_upcase">RESULT</string>
    <string name="division">Division:</string>
    <string name="points">Points:</string>
    <string name="details">DETAILS</string>
    <string name="test">Test</string>
    <string name="empty_result">No result</string>
    <string name="student_number_cannot_be_empty">Student number cannot be empty</string>
    <string name="action_payers">Payers</string>
    <string name="action_applicants">Applicants</string>
    <string name="title_activity_necta_activity2">NectaActivity2</string>
    <string name="title_activity_temp">Temp</string>
    <string name="search_title">Search</string>
    <string name="search_school_hint">Search School</string>
    <string name="title_activity_necta_school_result">School Result</string>
    <string name="mpesa_pay_instructions">1. To get MPESA Menu dial *150*00# (Piga *150*00#)\n\n
                                          2. Choose option 4 for Pay by MPESA (Lipa kwa MPESA)\n\n
                                          3. Choose option 3 for Choose Business (Chagua aina ya Biashara unayolipa)\n\n
                                          4. Enter 8 for Education Services(Ingiza 8 kwa Huduma za Elimu)\n\n
                                          5. Enter 2 for HESLB(Ingiza 2 kwa HESLB)\n\n
                                          6. Enter reference number (Ingiza namba yako ya kumbukumbu), which is your formatted 15 character form 4 index number e.g. S0143.0012.2009\n\n
                                          7. Enter the amount in Tshs to pay either 30,000 or 10,000 based on your application category\n\n
                                          8. Enter your 4 digit PIN\n\n
                                          9. Enter 1 to confirm\n\n
                                          10. A confirmation Message will be displayed. N.B: Please keep this message privately\n\n
    </string>
    <string name="nmb_pay_instructions">1. Dial *150*00#\n\n
                                        2. Select option 1: Send Money\n\n
                                        3. Select option 3: Bank\n\n
                                        4. Select option 2: NMB\n\n
                                        5. Enter reference\n\n
                                        6. Enter Account no\n\n
                                        7. Enter amount\n\n
                                        8. Enter PIN {M-PESA PIN}\n\n
                                        9. Press 1 to confirm\n\n
                                        10. Receive M-Pesa\n\n
    </string>

    <string-array name="heslb_choice">
        <item>Applicants</item>
        <item>Payers</item>
    </string-array>

    <string name="title_activity_heslb_payer_result">Payer Summary</string>
    <string name="title_activity_heslb_pay_loan">Pay Loan</string>
    <string name="title_activity_heslb_choice">Choose user type</string>

</resources>
