<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.NectaStudentFragment">

    <com.andreabaccega.widget.FormEditText
        whatever:testType="nocheck"
        whatever:emptyErrorString="@string/student_number_cannot_be_empty"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etStudentNumber"
        android:hint="@string/student_number"
        android:gravity="center"
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/button" />
</LinearLayout>
