<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.NectaResultFragment">

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty_result"
        android:background="@color/light_grey4"
        android:textColor="@color/light_grey2"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvStdNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewBold"
            android:text="Student no:"/>

        <TextView
            android:id="@+id/tvStdNumberResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            style="@style/TextView"
            android:text="S123"/>

        <TextView
            android:id="@+id/tvStdName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewBold"
            android:layout_below="@id/tvStdNumber"
            android:text="Name:"/>

        <TextView
            android:id="@+id/tvStdNameResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvStdNumber"
            style="@style/TextView"
            android:text="Aron Kondoro"/>

        <TextView
            android:id="@+id/tvDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewBold"
            android:layout_below="@id/tvStdName"
            android:text="@string/division"/>

        <TextView
            android:id="@+id/tvDivisionResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvStdName"
            style="@style/TextView"
            android:text="I"/>

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDivision"
            android:text="@string/points"
            style="@style/TextViewBold"/>

        <TextView
            android:id="@+id/tvPointsResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvDivision"
            android:text="8"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="90dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:stretchMode="columnWidth"
            android:gravity="center"
            />

    </LinearLayout>

</LinearLayout>
